--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -59,6 +59,9 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\STRlantian\Util\STextRoller.cs" />
     <Compile Include="Assets\Scripts\STRlantian\GameEffects\BlurApplier.cs" />
+    <Compile Include="Assets\Scripts\STRlantian\Gameplay\BaseScene.cs" />
+    <Compile Include="Assets\Scripts\STRlantian\Gameplay\Charting\Chart.cs" />
+    <Compile Include="Assets\Scripts\STRlantian\Gameplay\Charting\ChartIO.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Scripts\STRlantian\GameEffects\Shaders\Pixelation.shader" />
@@ -868,7 +871,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Assets\Scripts\Readme.md" />
+    <ProjectReference Include="YamlDotNet.csproj">
+      <Project>{2EA0BE93-1399-7CAC-C853-54184855E022}</Project>
+      <Name>YamlDotNet</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\Readme.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
