--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,20 +60,20 @@
     <Compile Include="Assets\Scripts\STRlantian\Gameplay\Charting\ChartIO.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Gameplay\Block\BlockController\CubeController.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Gameplay\Charting\Chart.cs" />
-    <Compile Include="Assets\Scripts\STRlantian\Gameplay\BaseScene.cs" />
+    <Compile Include="Assets\Scripts\STRlantian\Gameplay\SmoothTransformer.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Gameplay\Note\NoteSpawner.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Gameplay\Note\NoteReceiver.cs" />
-    <Compile Include="Assets\Scripts\STRlantian\Gameplay\Note\Note.cs" />
+    <Compile Include="Assets\Scripts\STRlantian\Gameplay\Note\ANote.cs" />
     <Compile Include="Assets\Scripts\STRlantian\GameEffects\BlurApplier.cs" />
     <Compile Include="Assets\Scripts\STRlantian\GameEffects\HitEffect.cs" />
-    <Compile Include="Assets\Scripts\STRlantian\Gameplay\SmoothTransformer.cs" />
-    <Compile Include="Assets\Scripts\STRlantian\Game\TestScene.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Gameplay\Block\BlockController\ABlockController.cs" />
-    <Compile Include="Assets\Scripts\STRlantian\Gameplay\Song\SongInfo.cs" />
+    <Compile Include="Assets\Scripts\STRlantian\Gameplay\Charting\SongInfo.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Gameplay\Block\Pane\APane.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Util\SVectorConverter.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Util\STransformer.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Util\STextRoller.cs" />
+    <Compile Include="Assets\Scripts\STRlantian\Gameplay\Scene\PlayScene.cs" />
+    <Compile Include="Assets\Scripts\STRlantian\Gameplay\Note\NoteTap.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Scripts\STRlantian\GameEffects\Shaders\Pixelation.shader" />
@@ -885,6 +885,9 @@
       <Project>{2EA0BE93-1399-7CAC-C853-54184855E022}</Project>
       <Name>YamlDotNet</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Assets\Scripts\STRlantian\NewFolder1\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
