--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -8,8 +8,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <ProjectGuid>{2CDF63FF-E109-3912-4D41-147451CA3E69}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -59,6 +58,8 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\STRlantian\Gameplay\Charting\ChartIO.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Gameplay\Block\BlockController\CubeController.cs" />
+    <Compile Include="Assets\Scripts\STRlantian\Gameplay\Note\NoteTap.cs" />
+    <Compile Include="Assets\Scripts\STRlantian\Gameplay\Scene\PlayScene.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Gameplay\Charting\Chart.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Gameplay\SmoothTransformer.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Gameplay\Note\NoteSpawner.cs" />
@@ -72,8 +73,6 @@
     <Compile Include="Assets\Scripts\STRlantian\Util\SVectorConverter.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Util\STransformer.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Util\STextRoller.cs" />
-    <Compile Include="Assets\Scripts\STRlantian\Gameplay\Scene\PlayScene.cs" />
-    <Compile Include="Assets\Scripts\STRlantian\Gameplay\Note\NoteTap.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Scripts\STRlantian\GameEffects\Shaders\Pixelation.shader" />
@@ -885,9 +884,6 @@
       <Project>{2EA0BE93-1399-7CAC-C853-54184855E022}</Project>
       <Name>YamlDotNet</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Assets\Scripts\STRlantian\NewFolder1\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
