--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -8,7 +8,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <ProjectGuid>{2CDF63FF-E109-3912-4D41-147451CA3E69}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -56,7 +57,7 @@
     <Analyzer Include="D:\MyPrograms\VisualStudioIDE\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\STRlantian\Gameplay\Charting\ChartIO.cs" />
+    <Compile Include="Assets\Scripts\STRlantian\Gameplay\Charting\SChartIO.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Gameplay\Block\BlockController\CubeController.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Gameplay\Note\NoteTap.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Gameplay\Scene\PlayScene.cs" />
@@ -68,13 +69,13 @@
     <Compile Include="Assets\Scripts\STRlantian\GameEffects\BlurApplier.cs" />
     <Compile Include="Assets\Scripts\STRlantian\GameEffects\HitEffect.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Gameplay\Block\BlockController\ABlockController.cs" />
-    <Compile Include="Assets\Scripts\STRlantian\Gameplay\Charting\SongInfo.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Gameplay\Block\Pane\APane.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Util\SVectorConverter.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Util\STransformer.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Util\STextRoller.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\Scripts\Charts\Test\SP.xml" />
     <None Include="Assets\Scripts\STRlantian\GameEffects\Shaders\Pixelation.shader" />
     <None Include="Assets\Scripts\STRlantian\GameEffects\Shaders\ImageBlur.shader" />
     <None Include="Assets\Scripts\STRlantian\GameEffects\Shaders\GlowEdge.shader" />
