--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -56,7 +56,7 @@
     <Analyzer Include="D:\MyPrograms\VisualStudioIDE\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\STRlantian\Editor\ComponentSummoner.cs" />
+    <Compile Include="Assets\Scripts\STRlantian\Editor\Generator.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
