--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -72,6 +72,10 @@
     <Compile Include="Assets\Scripts\STRlantian\Util\SVectorConverter.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Util\STransformer.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Util\STextRoller.cs" />
+    <Compile Include="Assets\Scripts\STRlantian\Gameplay\Note\NoteFlick.cs" />
+    <Compile Include="Assets\Scripts\STRlantian\Gameplay\Note\NoteDrag.cs" />
+    <Compile Include="Assets\Scripts\STRlantian\Gameplay\Note\NoteHold.cs" />
+    <Compile Include="Assets\Scripts\STRlantian\Gameplay\Event\AEvent.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Scripts\Charts\Test\Test_SP.xml" />
