--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -8,7 +8,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <ProjectGuid>{2CDF63FF-E109-3912-4D41-147451CA3E69}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -58,7 +59,6 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\STRlantian\Gameplay\Charting\SChartIO.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Gameplay\Note\NoteDrag.cs" />
-    <Compile Include="Assets\Scripts\STRlantian\Gameplay\Block\BlockController\CubeController.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Gameplay\Note\NoteTap.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Gameplay\Event\AEvent.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Gameplay\Scene\PlayScene.cs" />
@@ -71,7 +71,6 @@
     <Compile Include="Assets\Scripts\STRlantian\GameEffects\BlurApplier.cs" />
     <Compile Include="Assets\Scripts\STRlantian\GameEffects\HitEffect.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Gameplay\Note\NoteHold.cs" />
-    <Compile Include="Assets\Scripts\STRlantian\Gameplay\Block\BlockController\ABlockController.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Gameplay\Block\Pane\APane.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Util\SVectorConverter.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Util\STransformer.cs" />
