--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -8,7 +8,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <ProjectGuid>{2CDF63FF-E109-3912-4D41-147451CA3E69}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -56,6 +57,7 @@
     <Analyzer Include="D:\MyPrograms\VisualStudioIDE\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\STRlantian\Gameplay\Block\LineRenderer.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Gameplay\Charting\SChartIO.cs" />
     <Compile Include="Assets\Scripts\DreamOfStars\Structures\EventNode.cs" />
     <Compile Include="Assets\Scripts\DreamOfStars\Structures\GameSong.cs" />
@@ -73,7 +75,6 @@
     <Compile Include="Assets\Scripts\STRlantian\Gameplay\SmoothTransformer.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Gameplay\Note\NoteFlick.cs" />
     <Compile Include="Assets\Scripts\DreamOfStars\UI\SafeAreaManager.cs" />
-    <Compile Include="Assets\Scripts\STRlantian\Gameplay\Note\NoteSpawner.cs" />
     <Compile Include="Assets\Scripts\DreamOfStars\Utils\Ease.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Gameplay\Note\NoteReceiver.cs" />
     <Compile Include="Assets\Scripts\STRlantian\Gameplay\Note\ANote.cs" />
